resources/css/style.css
body {
  font-family: helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;
}

/*header, logo, and nav*/

header {
  border-bottom: 1px solid seashell;
  height: 69px;
  width: 100%;
  position: fixed;
  top: 0;
  z-index: 5;
  display: flex;
  background-color: black;
}

.logo {
  display: flex;
  flex: 1;
  justify-content: flex-start;
  align-items: center;
  padding-left: 10px;
}

.logo img {
  height: 50px;
}

.nav {
  display: flex;
  flex: 1;
  justify-content: flex-end;
  align-items: center;
}
/*why does the body styling not making it's way to the <a> divs??*/
.nav-link a {
  color: seashell;
  padding: 0 15px 0 16px;
}

/*mission background image and text*/

.miss-img {
  background-image: url("../images/img-mission-background.jpg");
  position: relative;
  top: 63px;
  width: 1200px;
  height: 700px;
  display: flex;
  align-items: center;
}

.mission {
  background-color: black;
  width: 100%;
}

/*Tea of the month text and wrapped images*/

.t-month {
  position: relative;
  top:63px;
}
.month-img {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.month-img img {
  width: 300px;
  height: 200px;
  margin-right: 28px;
}

.month-img h4 {
  margin: 10px 0 20px 0;
}

/*Locations - background img, header and columns*/
.locations-img {
  background-image: url("../images/img-locations-background.jpg");
  height: 563px;
  width: 100%;
  position: relative;
  top: 69px;
}

.locations-txt {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  height: 140px;
  margin-bottom: 15px;
}

.locations-txt h2 {
  padding: 10px;
  margin: 0;
}

.lcts-container {
  display: flex;
  justify-content: center;
}

.locations {
  display: flex;
  flex-direction: column;
  background-color: black;
  width: 300px;
  margin: 0 20px;
  opacity: 1;
}

.locations h3 {
  padding:0;
  margin:0;
  margin-top: 15px;
  margin-bottom: 10px;
}

.directions {
  margin: 20px 0;
}

/*footer and copyright*/
footer {
  height: 200px;
  position: relative;
  top: 69px;
}

.copyright {
  position: relative;
  top: 69px;
  margin-top: 20px;
  text-align: left;
}

